# yoloswe

./: .bazelrc  .gitattributes  .gitignore  .golangci.yml  .wt.yaml  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  SECURITY.md  TODOS.md  WORKSPACE  go.work  progress.md  renovate.json5
agent-cli-wrapper/acp/: BUILD.bazel  client.go  client_options.go  client_options_test.go  doc.go  errors.go  events.go  handlers.go  handlers_test.go  jsonrpc.go  process.go  protocol.go  session.go  session_test.go  state.go
agent-cli-wrapper/agentstream/: BUILD.bazel  doc.go  events.go  events_test.go
agent-cli-wrapper/agy/: BUILD.bazel  doc.go  errors.go  events.go  process.go  process_test.go  session.go  session_options.go
agent-cli-wrapper/claude/: BUILD.bazel  SDK_PROTOCOL.md  accumulator.go  accumulator_test.go  doc.go  errors.go  errors_test.go  events.go  mcp.go  message.go  permission.go  process.go  process_test.go  query.go  query_test.go  recorder.go  recorder_test.go  resume_test.go  sdk_mcp.go  sdk_mcp_test.go  sdk_mcp_typed.go  sdk_mcp_typed_test.go  session.go  session_bg_test.go  session_bgtask.go  session_bgtask_test.go  session_dispatch_test.go  session_monitor_test.go  session_options.go  session_options_test.go  session_test_helpers_test.go  special_commands.go  special_commands_test.go  stream_replay_test.go  turn.go  turn_retry_test.go  turn_test.go
agent-cli-wrapper/codex/: BUILD.bazel  accumulator.go  approval.go  client.go  client_options.go  client_options_test.go  client_test.go  errors.go  errors_test.go  event_translate.go  event_translate_test.go  events.go  events_test.go  jsonrpc.go  process.go  state.go  state_test.go  thread.go  thread_test.go  turn_integration_test.go
agent-cli-wrapper/cursor/: BUILD.bazel  doc.go  errors.go  events.go  events_test.go  process.go  process_test.go  protocol.go  protocol_test.go  query.go  session.go  session_options.go  session_options_test.go  session_test.go
agent-cli-wrapper/displaytext/: BUILD.bazel  displaytext.go  displaytext_test.go
agent-cli-wrapper/integration/: BUILD.bazel  llmendpoint_test.go  resume_test.go
agent-cli-wrapper/llmendpoint/: BUILD.bazel  llmendpoint.go  llmendpoint_test.go
agent-cli-wrapper/protocol/: BUILD.bazel  content.go  content_test.go  control.go  control_test.go  mcp.go  mcp_test.go  messages.go  messages_test.go  output.go  output_test.go  parse.go  parse_test.go  stream.go  stream_test.go  system.go  system_test.go  trace.go  trace_test.go
agent-cli-wrapper/transient/: BUILD.bazel  transient.go  transient_test.go
bramble/: BUILD.bazel  go.mod  go.sum  main.go  main_test.go
bramble/app/: BUILD.bazel  aggregate_cost_test.go  allsessions.go  auto_switch_test.go  commandcenter.go  commandcenter_test.go  confirmprompt.go  confirmprompt_test.go  dropdown.go  dropdown_sizing.go  dropdown_sizing_test.go  dropdown_test.go  editor_test.go  filetree.go  filetree_open_test.go  gitstatus.go  helpoverlay.go  helpoverlay_test.go  markdown.go  merge_test.go  model.go  new_session_cross_repo_test.go  new_session_worktree_race_test.go  output.go  output_test.go  playback.go  playback_test.go  quick_switch_test.go  quit_confirm_test.go  render_coverage_test.go  repocontext.go  repohooks_test.go  repopicker.go  repopicker_test.go  reposettingsdialog.go  reposettingsdialog_test.go  scrollrender_test.go  session_subtitle_test.go  settings.go  settings_test.go  (+23 more)
bramble/control/: BUILD.bazel  dispatcher.go  dispatcher_test.go  proto.go  server.go  server_test.go  stream.go  stream_test.go  transport.go  wsconn.go
bramble/hub/: BUILD.bazel  auth.go  hub.go  hub_test.go  registry.go  registry_test.go  stream.go  web.go
bramble/ipc/: BUILD.bazel  client.go  protocol.go  server.go  server_test.go
bramble/meetingbot/: BUILD.bazel  agent_client.go  bot.go  eval.go  eval.sh  fallback.go  local_client.go  meetingbot_test.go  transcript.go  types.go
bramble/remote/: BUILD.bazel  DESIGN.md  auth.go  auth_test.go  broadcaster.go  broadcaster_test.go  client.go  client_test.go  convert.go  convert_test.go  server.go  server_test.go  session_proxy.go  taskrouter_proxy.go  worktree_proxy.go
bramble/replay/: BUILD.bazel  claude.go  codex.go  compact.go  helpers.go  raw_jsonl.go  replay.go  replay_test.go
bramble/service/: BUILD.bazel  taskrouter.go  worktree.go
bramble/session/: BUILD.bazel  delegator_mock.go  delegator_runner.go  delegator_runner_test.go  delegator_scenario.go  delegator_tools.go  delegator_tools_test.go  event_handler.go  event_handler_test.go  manager.go  registry.go  (+17 more)
cliapp/: BUILD.bazel  app.go  app_test.go  buildinfo.go  buildinfo_test.go  flags.go  flags_test.go  go.mod  go.sum  logfile.go  logfile_test.go  redact.go  redact_test.go  signals.go  signals_test.go
jiradozer/: BUILD.bazel  README.md  agent.go  agent_retry_test.go  agent_test.go  config.go  config_test.go  discovery.go  discovery_test.go  gitstate.go  go.mod  go.sum  jiradozer.example.yaml  notify.go  notify_test.go  orchestrator.go  orchestrator_failure_report_test.go  orchestrator_logtail.go  orchestrator_logtail_test.go  orchestrator_test.go  poller.go  poller_test.go  pr.go  prompts.go  refine.go  refine_test.go  runtime_state.go  runtime_state_test.go  state.go  state_test.go  steplabels.go  steplabels_test.go  validation.go  workflow.go  workflow_no_changes_test.go  workflow_test.go
prdozer/: BUILD.bazel  README.md  agent.go  changeset.go  changeset_test.go  config.go  config_test.go  discovery.go  discovery_test.go  go.mod  orchestrator.go  orchestrator_test.go  prdozer.example.yaml  snapshot.go  state.go  state_test.go  watcher.go  watcher_test.go
wt/: BUILD.bazel  atomic.go  atomic_test.go  config.go  config_test.go  context.go  context_test.go  git.go  git_test.go  github.go  github_test.go  go.mod  go.sum  output.go  output_test.go  worktree.go  worktree_test.go
yoloswe/: BUILD.bazel  build_integration_test.go  builder.go  builder_test.go  codetalk.go  codetalk_test.go  go.mod  go.sum  integration_test.go  runtime_test.go  session.go  swe.go  swe_test.go  validation.go  validation_test.go
(+676 files in other folders)
