"""Yoloswe Bazel Module"""

module(
    name = "yoloswe",
)

# Go rules for building Go code - updated for Bazel 8+ compatibility
bazel_dep(name = "rules_go", version = "0.58.3")

# Gazelle for generating BUILD files automatically
bazel_dep(name = "gazelle", version = "0.44.0")

# Rust rules for building Rust code
bazel_dep(name = "rules_rust", version = "0.67.0")

# Prost rules for Rust protobuf
bazel_dep(name = "rules_rust_prost", version = "0.67.0")

# Proto rules for protocol buffers
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "protobuf", version = "29.0")

# Shell rules for sh_binary
bazel_dep(name = "rules_shell", version = "0.4.1")

# Configure Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.6")

# Configure Go dependencies from go.work
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")

# Standard public Go proxy
go_deps.config(
    go_env = {
        "GOPROXY": "https://proxy.golang.org,direct",
    },
)
use_repo(go_deps, "com_github_bazelment_yoloswe_agent_cli_wrapper", "com_github_spf13_cobra")

# Configure Rust toolchain
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2024")
