load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "bramble_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazelment/yoloswe/bramble",
    visibility = ["//visibility:private"],
    deps = [
        "//bramble/app",
        "//bramble/cmd/codereview",
        "//bramble/cmd/delegator",
        "//bramble/cmd/speak",
        "//bramble/ipc",
        "//bramble/session",
        "//bramble/taskrouter",
        "//multiagent/agent",
        "//wt",
        "//yoloswe",
        "@com_github_spf13_cobra//:cobra",
        "@land_charm_bubbletea_v2//:bubbletea",
        "@org_golang_x_term//:term",
    ],
)

go_binary(
    name = "bramble",
    embed = [":bramble_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "bramble_test",
    srcs = ["main_test.go"],
    embed = [":bramble_lib"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
