load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "jiradozer",
    srcs = [
        "agent.go",
        "config.go",
        "discovery.go",
        "orchestrator.go",
        "poller.go",
        "state.go",
        "workflow.go",
    ],
    importpath = "github.com/bazelment/yoloswe/jiradozer",
    visibility = ["//visibility:public"],
    deps = [
        "//agent-cli-wrapper/claude/render",
        "//jiradozer/tracker",
        "//multiagent/agent",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "jiradozer_test",
    srcs = [
        "agent_test.go",
        "config_test.go",
        "discovery_test.go",
        "orchestrator_test.go",
        "poller_test.go",
        "state_test.go",
        "workflow_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":jiradozer"],
    deps = [
        "//agent-cli-wrapper/claude/render",
        "//jiradozer/tracker",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
