load("@rules_go//go:def.bzl", "go_library", "go_test")

exports_files(["jiradozer.example.yaml"])

go_library(
    name = "jiradozer",
    srcs = [
        "agent.go",
        "config.go",
        "discovery.go",
        "gitstate.go",
        "orchestrator.go",
        "orchestrator_logtail.go",
        "poller.go",
        "prompts.go",
        "runtime_state.go",
        "state.go",
        "steplabels.go",
        "workflow.go",
    ],
    importpath = "github.com/bazelment/yoloswe/jiradozer",
    visibility = ["//visibility:public"],
    deps = [
        "//agent-cli-wrapper/claude/render",
        "//agent-cli-wrapper/llmendpoint",
        "//jiradozer/tracker",
        "//multiagent/agent",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "jiradozer_test",
    srcs = [
        "agent_retry_test.go",
        "agent_test.go",
        "config_test.go",
        "discovery_test.go",
        "orchestrator_logtail_test.go",
        "orchestrator_test.go",
        "poller_test.go",
        "runtime_state_test.go",
        "state_test.go",
        "steplabels_test.go",
        "workflow_no_changes_test.go",
        "workflow_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":jiradozer"],
    deps = [
        "//agent-cli-wrapper/claude",
        "//agent-cli-wrapper/claude/render",
        "//agent-cli-wrapper/codex",
        "//jiradozer/tracker",
        "//multiagent/agent",
        "//wt",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
