load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "wt",
    srcs = [
        "atomic.go",
        "config.go",
        "context.go",
        "git.go",
        "github.go",
        "output.go",
        "worktree.go",
    ],
    importpath = "github.com/bazelment/yoloswe/wt",
    visibility = ["//visibility:public"],
    deps = ["@in_gopkg_yaml_v3//:yaml_v3"],
)

go_test(
    name = "wt_test",
    srcs = [
        "atomic_test.go",
        "config_test.go",
        "context_test.go",
        "git_test.go",
        "github_test.go",
        "output_test.go",
        "worktree_test.go",
    ],
    embed = [":wt"],
)
