load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "acp",
    srcs = [
        "client.go",
        "client_options.go",
        "doc.go",
        "errors.go",
        "events.go",
        "handlers.go",
        "jsonrpc.go",
        "process.go",
        "protocol.go",
        "session.go",
        "state.go",
    ],
    importpath = "github.com/bazelment/yoloswe/agent-cli-wrapper/acp",
    visibility = ["//visibility:public"],
    deps = [
        "//agent-cli-wrapper/agentstream",
        "//agent-cli-wrapper/internal/procattr",
    ],
)

go_test(
    name = "acp_test",
    srcs = [
        "handlers_test.go",
        "session_test.go",
    ],
    embed = [":acp"],
)
