load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "agentstream",
    srcs = [
        "doc.go",
        "events.go",
    ],
    importpath = "github.com/bazelment/yoloswe/agent-cli-wrapper/agentstream",
    visibility = ["//visibility:public"],
)

go_test(
    name = "agentstream_test",
    srcs = ["events_test.go"],
    embed = [":agentstream"],
)
