load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "claude",
    srcs = [
        "accumulator.go",
        "doc.go",
        "errors.go",
        "events.go",
        "interactive.go",
        "mcp.go",
        "message.go",
        "permission.go",
        "process.go",
        "query.go",
        "recorder.go",
        "sdk_mcp.go",
        "sdk_mcp_typed.go",
        "session.go",
        "session_options.go",
        "state.go",
        "turn.go",
    ],
    importpath = "github.com/bazelment/yoloswe/agent-cli-wrapper/claude",
    visibility = ["//visibility:public"],
    deps = [
        "//agent-cli-wrapper/agentstream",
        "//agent-cli-wrapper/internal/ndjson",
        "//agent-cli-wrapper/internal/procattr",
        "//agent-cli-wrapper/protocol",
        "@com_github_invopop_jsonschema//:jsonschema",
    ],
)

go_test(
    name = "claude_test",
    srcs = [
        "accumulator_test.go",
        "errors_test.go",
        "interactive_test.go",
        "mcp_test.go",
        "process_test.go",
        "query_test.go",
        "recorder_test.go",
        "sdk_mcp_test.go",
        "sdk_mcp_typed_test.go",
        "turn_test.go",
    ],
    embed = [":claude"],
    deps = [
        "//agent-cli-wrapper/protocol",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
