load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protocol",
    srcs = [
        "content.go",
        "control.go",
        "mcp.go",
        "messages.go",
        "parse.go",
        "stream.go",
        "trace.go",
    ],
    importpath = "github.com/bazelment/yoloswe/agent-cli-wrapper/protocol",
    visibility = ["//visibility:public"],
)

go_test(
    name = "protocol_test",
    srcs = [
        "control_test.go",
        "mcp_test.go",
        "parse_test.go",
        "trace_test.go",
    ],
    data = ["//agent-cli-wrapper/testdata/traces:trace_fixtures"],
    embed = [":protocol"],
)
