load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protocol",
    srcs = [
        "content.go",
        "control.go",
        "mcp.go",
        "messages.go",
        "output.go",
        "parse.go",
        "stream.go",
    ],
    importpath = "github.com/bazelment/yoloswe/agent-cli-wrapper/protocol",
    visibility = ["//visibility:public"],
)

go_test(
    name = "protocol_test",
    srcs = [
        "content_test.go",
        "control_test.go",
        "mcp_test.go",
        "output_test.go",
        "parse_test.go",
        "stream_test.go",
        "trace_test.go",
    ],
    embed = [":protocol"],
)
