load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "app",
    srcs = [
        "dropdown.go",
        "filetree.go",
        "helpoverlay.go",
        "markdown.go",
        "model.go",
        "output.go",
        "repopicker.go",
        "splitpane.go",
        "taskmodal.go",
        "textarea.go",
        "toast.go",
        "update.go",
        "view.go",
        "welcome.go",
    ],
    importpath = "github.com/bazelment/yoloswe/bramble/app",
    visibility = ["//bramble:__subpackages__"],
    deps = [
        "//bramble/session",
        "//wt",
        "//wt/taskrouter",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_glamour//:glamour",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@com_github_mattn_go_runewidth//:go-runewidth",
    ],
)

go_test(
    name = "app_test",
    srcs = [
        "aggregate_cost_test.go",
        "dropdown_test.go",
        "filetree_open_test.go",
        "helpoverlay_test.go",
        "output_test.go",
        "scrollrender_test.go",
        "session_subtitle_test.go",
        "textarea_test.go",
        "toast_test.go",
        "update_feedback_test.go",
        "update_scroll_test.go",
        "welcome_test.go",
        "width_test.go",
    ],
    embed = [":app"],
    deps = [
        "//bramble/session",
        "//wt",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_mattn_go_runewidth//:go-runewidth",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
