load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "app",
    srcs = [
        "allsessions.go",
        "confirmprompt.go",
        "dropdown.go",
        "filetree.go",
        "helpoverlay.go",
        "markdown.go",
        "model.go",
        "output.go",
        "repopicker.go",
        "reposettingsdialog.go",
        "settings.go",
        "splitpane.go",
        "taskmodal.go",
        "textarea.go",
        "theme.go",
        "themepicker.go",
        "toast.go",
        "update.go",
        "view.go",
        "welcome.go",
    ],
    importpath = "github.com/bazelment/yoloswe/bramble/app",
    visibility = ["//bramble:__subpackages__"],
    deps = [
        "//bramble/session",
        "//wt",
        "//wt/taskrouter",
        "@com_github_charmbracelet_bubbles//key",
        "@com_github_charmbracelet_bubbles//textarea",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_glamour//:glamour",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@com_github_mattn_go_runewidth//:go-runewidth",
    ],
)

go_test(
    name = "app_test",
    srcs = [
        "aggregate_cost_test.go",
        "auto_switch_test.go",
        "confirmprompt_test.go",
        "dropdown_test.go",
        "filetree_open_test.go",
        "helpoverlay_test.go",
        "merge_test.go",
        "output_test.go",
        "quick_switch_test.go",
        "quit_confirm_test.go",
        "repohooks_test.go",
        "repopicker_test.go",
        "reposettingsdialog_test.go",
        "scrollrender_test.go",
        "session_subtitle_test.go",
        "settings_test.go",
        "settings_ui_test.go",
        "show_all_sessions_test.go",
        "textarea_test.go",
        "toast_test.go",
        "update_feedback_test.go",
        "update_scroll_test.go",
        "welcome_test.go",
        "width_test.go",
        "worktree_warning_test.go",
    ],
    embed = [":app"],
    deps = [
        "//bramble/session",
        "//wt",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_mattn_go_runewidth//:go-runewidth",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
