load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "session",
    srcs = [
        "event_handler.go",
        "manager.go",
        "store.go",
        "tmux_detect.go",
        "tmux_name.go",
        "tmux_runner.go",
        "types.go",
    ],
    importpath = "github.com/bazelment/yoloswe/bramble/session",
    visibility = ["//bramble:__subpackages__"],
    deps = [
        "//agent-cli-wrapper/acp",
        "//agent-cli-wrapper/claude",
        "//agent-cli-wrapper/claude/render",
        "//multiagent/agent",
        "//yoloswe",
        "//yoloswe/planner",
    ],
)

go_test(
    name = "session_test",
    srcs = [
        "manager_test.go",
        "store_test.go",
        "tmux_test.go",
    ],
    embed = [":session"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
